--- a/themes/tom/templates/base.html
+++ b/themes/tom/templates/base.html
@@ -3,20 +3,38 @@
   <head>
     <title>{% block title %}{{ SITENAME }}{%endblock%}</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="{{ SITEURL }}/theme/css/{{ CSS_FILE }}" type="text/css" />
+    <link rel="stylesheet" href="{{ SITEURL }}/theme/css/{{ CSS_FILE }}" type="text/css"/>
+
+    <!-- font awesome shit -->
+    <link rel="stylesheet" href="{{ SITEURL }}/theme/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ SITEURL }}/theme/css/font-awesome.min.css">
+
     <!--[if IE]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
     <!--[if lte IE 7]>
-    <link rel="stylesheet" type="text/css" media="all" href="{{ SITEURL }}/css/ie.css"/>
-    <script src="{{ SITEURL }}/js/IE8.js" type="text/javascript"></script><![endif]-->
+      <link rel="stylesheet" type="text/css" media="all" href="{{ SITEURL }}/css/ie.css"/>
+    <script src="{{ SITEURL }}/js/IE8.js" type="text/javascript"></script>
+    <![endif]-->
     <!--[if lt IE 7]>
-    <link rel="stylesheet" type="text/css" media="all" href="{{ SITEURL }}/css/ie6.css"/><![endif]-->
+      <link rel="stylesheet" type="text/css" media="all" href="{{ SITEURL }}/css/ie6.css"/>
+    <![endif]-->
 
   </head>
   <body id="index" class="home">
-    <div id="header">
+    <div id="content-header">
+      Tom Hayden
+
+      <div id="content-header-icons">
+        <a href='http://www.facebook.com/haydenth'><i class="icon-facebook-2x"></i></a>
+        <a href='http://www.github.com/haydenth'><i class="icon-github"></i></a>
+      </div>
     </div>
-    {% block content %}
-    {% endblock %}
+
+    <div id="content-body">
+      {% block content %}
+      {% endblock %}
+    </div>
+
   </body>
 </html>
