adding font-awesome; not totally working yet

--- a/themes/tom/templates/base.html
+++ b/themes/tom/templates/base.html
@@ -3,11 +3,10 @@
   <head>
     <title>{% block title %}{{ SITENAME }}{%endblock%}</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="{{ SITEURL }}/theme/css/{{ CSS_FILE }}" type="text/css"/>
+    <link rel="stylesheet" href="{{ SITEURL }}/theme/css/{{ CSS_FILE }}" type="text/css" />
 
     <!-- font awesome shit -->
-    <link rel="stylesheet" href="{{ SITEURL }}/theme/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{{ SITEURL }}/theme/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{{ SITEURL }}/theme/css/font-awesome.css" type="text/css" />
 
     <!--[if IE]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -27,7 +26,7 @@
 
       <div id="content-header-icons">
         <a href='http://www.facebook.com/haydenth'><i class="icon-facebook-2x"></i></a>
-        <a href='http://www.github.com/haydenth'><i class="icon-github"></i></a>
+        <a href='http://www.github.com/haydenth'><i class="icon-github-2x"></i></a>
       </div>
     </div>
 
