--- a/themes/tom/templates/index.html
+++ b/themes/tom/templates/index.html
@@ -4,11 +4,13 @@
 
   {% for article in articles %}
      <div id="article">
-       <div id="article-title"><a href="{{ article.url }}" title="{{ article.title }}">
-          <i class="{{ article.icon }} icon-2x"></i>
-          {{ article.title }}
-       </a></div>
-       <h6 class="article-date">{{ article.locale_date }}</h6>
+       <div id="article-title">
+          <a href="{{ article.url }}" title="{{ article.title }}">
+            <i class="{{ article.icon }} icon-2x"></i>
+            {{ article.title }}
+          </a>
+         <div id="article-date">{{ article.locale_date }}</div>
+       </div>
      </div>
   {% endfor %}
 
