--- a/themes/tom/static/css/main.css
+++ b/themes/tom/static/css/main.css
@@ -11,6 +11,7 @@ body {
 
 #content-header a {
   color: black;
+  text-decoration: none;
 }
 
 #content-header a:hover {
@@ -33,6 +34,11 @@ body {
   font-size: 50px;
 }
 
+#content-header #aboutme {
+  border-top: 1px solid black;
+  font-family: 'Josefin Sans', sans-serif;
+}
+
 #content-header #thanks {
   margin-top: 30px;
   font-family: 'Josefin Sans', sans-serif;
@@ -44,6 +50,7 @@ body {
   margin-left: 370px; 
   width: 720px;
   background-color: white;
+  margin-top: 30px;
 }
 
 #article-body {
@@ -57,7 +64,13 @@ body {
 
 #article-title {
   font-family: 'Josefin Sans', sans-serif;
+  font-weight: bold;
   font-size: 20pt;
+  border-bottom: 1px solid black;
+}
+
+#article-date {
+  float: right;
 }
 
 #article-title a {
