--- a/themes/tom/templates/base.html
+++ b/themes/tom/templates/base.html
@@ -11,9 +11,8 @@
 
   
     <!-- code prettifier -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
     <script src="{{ SITEURL }}/theme/javascript/google-code-prettify/run_prettify.js"></script>
-    <!--<script src="{{ SITEURL }}/theme/javascript/force_code.js" type='text/javascript'></script>-->
+    <script src="{{ SITEURL }}/theme/javascript/force_code.js" type='text/javascript'></script>
 
     <!--[if IE]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -29,14 +28,20 @@
   </head>
   <body id="index" class="home">
     <div id="content-header">
-      <div id="myname">Tom Hayden</div>
+      <img src="{{ SITEURL }}/theme/images/workinghard.jpg" width=325>
+      <div id="myname"><a href="{{ SITEURL }}"</a>Tom Hayden</a></div>
 
       <div id="content-header-icons">
-        <a href='http://www.facebook.com/haydenth'><i class="icon-facebook icon-2x"></i></a>
-        <a href='http://www.linkedin.com/haydenth'><i class="icon-linkedin icon-2x"></i></a>
-        <a href='http://www.github.com/haydenth'><i class="icon-github icon-2x"></i></a>
-        <a href='http://www.twitter.com/haydenth'><i class="icon-twitter icon-2x"></i></a>
+        <a href='http://www.linkedin.com/in/haydenth' target="_blank"><i class="icon-linkedin icon-2x"></i></a>
+        <a href='http://www.github.com/haydenth' target="_blank"><i class="icon-github icon-2x"></i></a>
+        <a href='http://www.twitter.com/haydenth' target="_blank"><i class="icon-twitter icon-2x"></i></a>
+        <a href='http://www.facebook.com/haydenth' target="_blank"><i class="icon-facebook icon-2x"></i></a>
         <a href='mailto:thayden@gmail.com?subject=go+pound+sand'><i class="icon-envelope icon-2x"></i></a>
+      </div>
+      <div id="aboutme">
+        Location: Chicago, Illinois <br>
+        Job: Senior Data Developer <br>
+        Tacos: Yes<br>
       </div>
       <div id="thanks">
         Site built with Pelican, hosted S3. Magic icons thanks to <a href='http://fortawesome.github.io/Font-Awesome'><i class='icon-flag'></i></a> and pretty fonts thanks to <a href='http://www.google.com/fonts/'>Google Fonts</a>.
