--- a/themes/tom/templates/base.html
+++ b/themes/tom/templates/base.html
@@ -9,10 +9,8 @@
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/font-awesome.css" type="text/css" />
     <link href='http://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
 
-  
-    <!-- code prettifier -->
-    <script src="{{ SITEURL }}/theme/javascript/google-code-prettify/run_prettify.js"></script>
-    <script src="{{ SITEURL }}/theme/javascript/force_code.js" type='text/javascript'></script>
+    <!-- prettify stylesheet -->
+    <link rel="stylesheet" href="{{ SITEURL }}/theme/css/vibrant-ink.css" type="text/css" />
 
     <!--[if IE]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -54,4 +52,7 @@
     </div>
 
   </body>
+  <!-- code prettifier -->
+  <script src="{{ SITEURL }}/theme/javascript/prettify.js"></script>
+  <script src="{{ SITEURL }}/theme/javascript/force_code.js" type='text/javascript'></script>
 </html>
