adding new theme and math post

--- a/themes/tom/templates/base.html
+++ b/themes/tom/templates/base.html
@@ -10,7 +10,7 @@
     <link href='http://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
 
     <!-- prettify stylesheet -->
-    <link rel="stylesheet" href="{{ SITEURL }}/theme/css/vibrant-ink.css" type="text/css" />
+    <link rel="stylesheet" href="{{ SITEURL }}/theme/css/tomorrow-night-bright.css" type="text/css" />
 
     <!-- mathjax via CDN because im lazy -->
     <script type="text/x-mathjax-config">
@@ -34,7 +34,7 @@
     <div id="content-header">
       <img src="{{ SITEURL }}/theme/images/workinghard.jpg" width="325" alt="picture of me">
       <div id="myname">
-        <a href="{{ SITEURL }}">Tom Hayden</a>
+        <a href="/">Tom Hayden</a>
       </div>
 
       <div id="content-header-icons">
