--- a/themes/tom/templates/article.html
+++ b/themes/tom/templates/article.html
@@ -3,6 +3,7 @@
 {% block content %}
 
   <div id='article-title'>{{ article.title }}</div>
+  <div id='article-abstract'>Abstract: {{ article.abstract }}</div>
   <div id='article-body'>
     {{ article.content }}
   </div>
