Adding bitcoin post

--- a/themes/tom/templates/base.html
+++ b/themes/tom/templates/base.html
@@ -42,12 +42,12 @@
         <a href="/">Tom Hayden</a>
       </div>
 
-      <div id="content-header-icons">
-        <a href='http://www.linkedin.com/in/haydenth' target="_blank"><i class="icon-linkedin icon-2x"></i></a>
-        <a href='http://www.github.com/haydenth' target="_blank"><i class="icon-github icon-2x"></i></a>
-        <a href='http://www.twitter.com/haydenth' target="_blank"><i class="icon-twitter icon-2x"></i></a>
-        <a href='http://www.facebook.com/haydenth' target="_blank"><i class="icon-facebook icon-2x"></i></a>
-        <a href='mailto:thayden@gmail.com?subject=go+pound+sand'><i class="icon-envelope icon-2x"></i></a>
+      <div id="content-header-fas">
+        <a href='http://www.linkedin.com/in/haydenth' target="_blank"><i class="fa fa-linkedin fa-2x"></i></a>
+        <a href='http://www.github.com/haydenth' target="_blank"><i class="fa fa-github fa-2x"></i></a>
+        <a href='http://www.twitter.com/haydenth' target="_blank"><i class="fa fa fa-twitter fa-2x"></i></a>
+        <a href='http://www.facebook.com/haydenth' target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
+        <a href='mailto:thayden@gmail.com?subject=go+pound+sand'><i class="fa fa-envelope fa-2x"></i></a>
       </div>
       <div id="aboutme">
         Location: Chicago, Illinois <br>
@@ -57,7 +57,7 @@
         Disclaimer: I am an expert of nothing and make mistakes. If you find them, let me know in the comments (but don't be a dick)
       </div>
       <div id="thanks">
-        Site built with Pelican, hosted S3. Magic icons thanks to <a href='http://fortawesome.github.io/Font-Awesome'><i class='icon-flag'></i></a> and pretty fonts thanks to <a href='http://www.google.com/fonts/'>Google Fonts</a>.
+        Site built with Pelican, hosted S3. Magic fas thanks to <a href='http://fortawesome.github.io/Font-Awesome'><i class='fa-flag'></i></a> and pretty fonts thanks to <a href='http://www.google.com/fonts/'>Google Fonts</a>.
       </div>
     </div>
 
