updating blog posts

--- a/themes/tom/templates/base.html
+++ b/themes/tom/templates/base.html
@@ -53,6 +53,7 @@
         Location: Chicago, Illinois <br>
         Blog Topics: Math, CS, Stats, Human Things <br>
         Tacos: Yes<br>
+        Send me <a href='http://dogecoin.com/get-started'>$DOGE</a>: DSnhpH9HXZZMQhj2TeWmFhiky8zUNuV9Fu<br>
         <br>
         Disclaimer: I am an expert of nothing and make mistakes. If you find them, let me know in the comments (but don't be a dick)
       </div>
