--- a/themes/tom/templates/base.html
+++ b/themes/tom/templates/base.html
@@ -36,7 +36,7 @@
 
   </head>
   <body id="index" class="home">
-    <div id="content-header">
+    <section id="content-header">
       <img src="{{ SITEURL }}/theme/images/workinghard.jpg" width="325" alt="picture of me">
       <div id="myname">
         <a href="/">Tom Hayden</a>
@@ -60,12 +60,12 @@
       <div id="thanks">
         Site built with Pelican, hosted S3. Magic fas thanks to <a href='http://fortawesome.github.io/Font-Awesome'><i class='fa fa-flag'></i></a> and pretty fonts thanks to <a href='http://www.google.com/fonts/'>Google Fonts</a>.
       </div>
-    </div>
+    </section>
 
-    <div id="content-body">
+    <section id="content-body">
       {% block content %}
       {% endblock %}
-    </div>
+    </section>
 
   </body>
   <!-- code prettifier -->
