--- a/themes/tom/templates/tag.html
+++ b/themes/tom/templates/tag.html
@@ -2,18 +2,20 @@
 {% block title %}{{ SITENAME }} - «{{ tag }}»{% endblock %}
 
 {% block content %}
- <h2 class="page_title">Articles avec le mot-clé «{{ tag }}»</h2>
+ <h2 class="page_title">Articles About <b>{{ tag }}</b></h2>
  {% if articles %}
   {% for article in articles %} 
-    <article class="post">
-      <h2 class="title"><a href="{{ SITEURL }}/{{ article.url}}">{{ article.title }}</a></h2>
-      {%include 'meta.html'%}
+     <div id="article">
+       <div id="article-title">
+          <a href="{{ SITEURL }}/{{ article.url }}" title="{{ article.title }}">
+            <i class="fa {{ article.icon }} fa-lg"></i>
+            {{ article.title }}
+          </a>
+         <div id="article-date">{{ article.locale_date }}</div>
+       </div>
+       <div id="article-abstract">{{ article.abstract }} <a href='{{article.url}}'>Read</div>
+     </div>
 
-      <section class="post_content">
-        {{ article.summary }}<br />
-        <a class="more" href="{{ SITEURL }}/{{ article.url }}">Lire la suite...</a>
-      </section>
-    </article>
   {% endfor %}
  {% endif %}
 {% endblock %}
