--- a/themes/tom/templates/base.html
+++ b/themes/tom/templates/base.html
@@ -58,7 +58,7 @@
         Disclaimer: I am an expert of nothing and make mistakes. If you find them, let me know in the comments (but don't be a dick)
       </div>
       <div id="thanks">
-        Site built with Pelican, hosted S3. Magic fas thanks to <a href='http://fortawesome.github.io/Font-Awesome'><i class='fa fa-flag'></i></a> and pretty fonts thanks to <a href='http://www.google.com/fonts/'>Google Fonts</a>.
+        Site built with Pelican, hosted S3. Icons thanks to <a href='http://fortawesome.github.io/Font-Awesome'><i class='fa fa-flag'></i></a> and pretty fonts thanks to <a href='http://www.google.com/fonts/'>Google Fonts</a>.
       </div>
     </section>
 
