--- a/themes/tom/templates/index.html
+++ b/themes/tom/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}{{ SITENAME }}{% endblock %}
 
 {% block content %}
   <h1>Musings, Writings, and Other Thoughts </h1>
