--- a/themes/tom/templates/article.html
+++ b/themes/tom/templates/article.html
@@ -3,7 +3,18 @@
 
 {% block content %}
 
-  <div id='article-title'><i class="fa {{ article.icon }} fa-lg"></i> {{ article.title }}</div>
+  {% if article.image %}
+  <div class="row imagebox" style="background-image:url(/images/{{article.image}});">
+    <div id='article-title'>
+      {{ article.title }}
+    </div>
+  </div>
+  {% else %}
+  <div id='article-title'>
+    <i class="fa {{ article.icon }} fa-lg"></i> {{ article.title }}
+  </div>
+  {% endif %}
+
   <div id='article-abstract'>Abstract: {{ article.abstract }}</div>
   <div id='article-body'>
     {{ article.content }}
