--- a/themes/tom/templates/base.html
+++ b/themes/tom/templates/base.html
@@ -10,8 +10,12 @@
     <meta property="og:url" content="http://www.tomhayden3.com">
     <meta property="og:image" content="http://www.tomhayden3.com/theme/images/workinghard.jpg">
     <meta property="og:description" content="{{ DESCRIPTION }}">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/{{ CSS_FILE }}" type="text/css" />
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
     <!-- font awesome shit -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -44,35 +48,36 @@
 
   </head>
   <body id="index" class="home">
-    <section id="content-header">
-      <img src="{{ SITEURL }}/theme/images/workinghard.jpg" width="325" alt="picture of me">
-      <div id="myname">
-        <a href="/">Tom Hayden</a>
+    <div class="row" id="content-header">
+      <div class='col-md-1'>
+        <img src="{{ SITEURL }}/theme/images/workinghard.jpg" width="80" alt="picture of me">
       </div>
-
-      <div id="content-header-fas">
+      <div class='col-md-3'>
+        <div id='myname'><a href="/">Tom Hayden</a></div>
+      </div>
+      <div class='col-md-2'>
         <a href='http://www.linkedin.com/in/haydenth' target="_blank"><i class="fa fa-linkedin fa-2x"></i></a>
         <a href='http://www.github.com/haydenth' target="_blank"><i class="fa fa-github fa-2x"></i></a>
         <a href='http://www.twitter.com/haydenth' target="_blank"><i class="fa fa fa-twitter fa-2x"></i></a>
         <a href='http://www.facebook.com/haydenth' target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
         <a href='mailto:thayden@gmail.com?subject=go+pound+sand'><i class="fa fa-envelope fa-2x"></i></a>
+        </div>
+        <div class='col-md-4'>
+        <div id="aboutme_new">
+          Location: Chicago, Illinois <br>
+          Send me <a href='http://dogecoin.com/get-started'>$DOGE</a>: DSnhpH9HXZZMQhj2TeWmFhiky8zUNuV9Fu<br>
+        </div>
       </div>
-      <div id="aboutme">
-        Location: Chicago, Illinois <br>
-        Blog Topics: Math, CS, Stats, Human Things <br>
-        Tacos: Yes<br>
-        Send me <a href='http://dogecoin.com/get-started'>$DOGE</a>: DSnhpH9HXZZMQhj2TeWmFhiky8zUNuV9Fu<br>
-      </div>
-      <div id="thanks">
-        Site built with Pelican, hosted S3. Icons thanks to <a href='http://fortawesome.github.io/Font-Awesome'><i class='fa fa-flag'></i></a> and pretty fonts thanks to <a href='http://www.google.com/fonts/'>Google Fonts</a>.
-      </div>
-    </section>
+    </div>
 
-    <section id="content-body">
+    <div class="container" id='main-contain'>
+
+    <div class='row'>
       {% block content %}
       {% endblock %}
-    </section>
+    </div>
 
+  </div>
   </body>
   <!-- code prettifier -->
   <script src="{{ SITEURL }}/theme/javascript/prettify.js"></script>
